--- a/podcasts/templates/results_base.html
+++ b/podcasts/templates/results_base.html
@@ -15,117 +15,6 @@
     {% if results.view == "showpod" %}
       {% include "showpod.min.html" %}
     {% endif %}
-    <div class="col-12 results-buttons">
-      {% if results.view == "showpod" %}
-        {% if user.is_authenticated %}
-          <form class="d-inline sub-form" action="{% url 'subscribe' %}" method="POST">
-            {% csrf_token %}
-            <input type="hidden" name="podid" value="{{ results.podcast.podid }}">
-            {% if results.podcast.is_subscribed %}
-              <button type="submit" class="btn-dope sub-button">
-                Unsubscribe
-              </button>
-            {% else %}
-              <button type="submit" class="btn-dope active sub-button">
-                Subscribe
-              </button>
-            {% endif %}
-          </form>
-        {% endif %}
-        <a class="btn-dope episodes-button toggle" data-toggle="collapse" href="#episodes-collapse" aria-expanded="true" aria-controls="episodes-collapse">
-          {% if request.is_ajax %} {% include "button_loading.min.html" %} {% else %} Episodes {% endif %}
-        </a>
-        <a class="btn-dope reviews-button toggle" data-toggle="collapse" href="#reviews-collapse" aria-expanded="false" aria-controls="reviews-collapse">
-          Reviews
-        </a>
-      {% endif %}
-      {% if results.view == "grid" or results.view == "list" %}
-        {% if results.view == "grid" %}
-          <a class="btn-dope view-button active" href="{{ results.view_url }}">
-            <span>
-              <i class="fas fa-th" title="Toggle View"></i>
-            </span>
-            <span class="d-none">
-              <i class="fas fa-bars" title="Toggle View"></i>
-            </span>
-          </a>
-        {% elif results.view == "list" %}
-          <a class="btn-dope view-button active" href="{{ results.view_url }}">
-            <span class="d-none">
-              <i class="fas fa-th" title="Toggle View"></i>
-            </span>
-            <span>
-              <i class="fas fa-bars" title="Toggle View"></i>
-            </span>
-          </a>
-        {% endif %}
-      {% endif %}
-      {% if results.alphabet %}
-        {% if results.alphabet_nix_url %}
-          <a class="btn-dope active toggle" data-toggle="collapse" href="#alphabet-collapse-{{ results.view }}" aria-expanded="false" aria-controls="alphabet-collapse">
-            {{ results.selected_q|capfirst }}
-          </a>
-        {% else %}
-          <a class="btn-dope toggle" data-toggle="collapse" href="#alphabet-collapse-{{ results.view }}" aria-expanded="false" aria-controls="alphabet-collapse">
-            A-Z
-          </a>
-        {% endif %}
-      {% endif %}
-      {% if results.genres %}
-        {% if results.selected_genre %}
-          <a class="btn-dope active toggle" data-toggle="collapse" href="#genre-collapse-{{ results.view }}" aria-expanded="false" aria-controls="genre-collapse">
-            {{ results.selected_genre }}
-          </a>
-        {% else %}
-          <a class="btn-dope toggle" data-toggle="collapse" href="#genre-collapse-{{ results.view }}" aria-expanded="false" aria-controls="genre-collapse">
-            All Genres
-          </a>
-        {% endif %}
-      {% endif %}
-      {% if results.languages %}
-        {% if results.selected_language %}
-          <a class="btn-dope active toggle" data-toggle="collapse" href="#language-collapse-{{ results.view }}" aria-expanded="false" aria-controls="language-collapse">
-            {{ results.selected_language }}
-          </a>
-        {% else %}
-          <a class="btn-dope toggle" data-toggle="collapse" href="#language-collapse-{{ results.view }}" aria-expanded="false" aria-controls="language-collapse">
-            All Languages
-          </a>
-        {% endif %}
-      {% endif %}
-      {% if results.selected_provider == "dopepod" %}
-        <a class="btn-dope options-button active provider-button" href="{{ results.provider_url }}">
-          <span>On dopepod</span>
-          <span class="d-none">On itunes</span>
-        </a>
-      {% elif results.selected_provider == "itunes" %}
-        <a class="btn-dope options-button active provider-button" href="{{ results.provider_url }}">
-          <span class="d-none">On dopepod</span>
-          <span>On itunes</span>
-        </a>
-      {% endif %}
-      {% if results.view == "subscriptions" %}
-        <a class="btn-dope select-all-button" href="#">
-          Select All
-        </a>
-        <a class="btn-dope unsubscribe-button" href="{% url 'unsubscribe' %}">
-          Unsubscribe
-        </a>
-      {% endif %}
-      {% if results.view == "playlist" %}
-        <a class="btn-dope update-playlist" href="{% url 'playlist' %}">
-          <i class="fas fa-sync" title="Update"></i>
-        </a>
-      {% endif %}
-      {% if results.view == "settings" %}
-        <button class="btn-dope">Delete Account</button>
-      {% endif %}
-      {% if results.view == "last_played" %}
-        <a class="btn-dope update-last-played" href="{% url 'last_played' %}">
-          <i class="fas fa-sync" title="Update"></i>
-        </a>
-      {% endif %}
-    </div>
     {% if results.alphabet %}
       <div class="collapse fade options-collapse" id="alphabet-collapse-{{ results.view }}">
         <div class="options-buttons">
@@ -197,32 +86,19 @@
       {% if results.view == "grid" or results.view == "list" %}
         {% include "search.min.html" %}
       {% elif results.view == "charts" %}
-        <div class="row">
-          {% include "charts.min.html" %}
-        </div>
+        {% include "charts.min.html" %}
       {% elif results.view == "subscriptions" %}
-        <div class="row">
-          {% include "subscriptions.min.html" %}
-        </div>
+        {% include "subscriptions.min.html" %}
       {% elif results.view == "showpod" %}
-        <div class="row showpod-collapse fade collapse show" id="episodes-collapse">
-          {% if results.episodes %} {% include "episodes.min.html" %} {% endif %}
-        </div>
-        <div class="row showpod-collapse fade collapse" id="reviews-collapse">
-          <div class="col-12">
-            <p>
-              Coming soon
-            </p>
-          </div>
+        <div class="row" id="episodes">
+          {% include "episodes.min.html" %}
         </div>
       {% elif results.view == "playlist" %}
         <div class="row">
           {% include "episodes.min.html" %}
         </div>
       {% elif results.view == "last_played"%}
-        <div class="row">
-          {% include "last_played.min.html" %}
-        </div>
+        {% include "last_played.min.html" %}
       {% elif results.view == "settings" %}
         {% include "settings.min.html" %}
       {% endif %}
