--- a/podcasts/templates/subscriptions.html
+++ b/podcasts/templates/subscriptions.html
@@ -6,7 +6,7 @@
     {% with subscription.podcast as podcast %}
       <div class="col-12 col-md-4 subscriptions-box">
         <div class="subscriptions-result clearfix" data-podid="{{ podcast.podid }}">
-          <a class="showpod-link" data-podid="{{ podcast.object.podid }}" href="/showpod/{{ podcast.podid }}/" title="{{ podcast.title }}">
+          <a class="showpod-link" data-podid="{{ podcast.podid }}" href="/showpod/{{ podcast.podid }}/" title="{{ podcast.title }}">
             <img class="img-fluid" src="https://dopepod.me/img/{{ podcast.artworkUrl }}100x100bb.jpg"
             onerror="this.src='http://{{ podcast.artworkUrl }}100x100bb.jpg'" alt="{{ podcast.title }}" />
           </a>
@@ -22,9 +22,13 @@
             {{ subscription.last_updated|date:'d-m-Y H:i' }}
           </p>
           <div class="subscriptions-buttons">
-            <a class="btn-dope unsubscribe-button sub-nix" href="{% url 'unsubscribe' %}" >
-              <i class="fas fa-times" title="Unsubscribe"></i>
-            </a>
+            <form class="d-inline subscriptions-form" action="{% url 'subscriptions' %}" method="POST">
+              {% csrf_token %}
+              <input type="hidden" name="podids[]" value="{{ podcast.podid }}">
+              <button type="submit" class="btn-dope sub-button">
+                <i class="fas fa-times" title="Unsubscribe"></i>
+              </button>
+            </form>
             <button class="btn-dope select-subscription">
               <i class="fas fa-check" title="Select"></i>
             </button>
