another round of general polishing: errors, settings, login, etc

--- a/index/templates/ajax.min.html
+++ b/index/templates/ajax.min.html
@@ -1,1 +1,1 @@
-{% block content %} {% endblock %} {% block center-stage %} {% endblock %} {% block results %} {% endblock %} {% block account %} {% endblock %}
+{% block center-stage %} {% endblock %} {% block account %} {% endblock %}
