--- a/podcasts/templates/last_played.html
+++ b/podcasts/templates/last_played.html
@@ -30,7 +30,7 @@
               Released
             </td>
             <td>
-              {{ episode.pubDate|date:'d-m-Y H:i' }}
+              {{ episode.pubDate|date:"d-m-Y H:i" }}
             </td>
           </tr>
           <tr>
