--- a/index/static/style.css
+++ b/index/static/style.css
@@ -5,7 +5,7 @@ body {
   transition: all .25s ease;
   -moz-transition: all .25s ease;
   -webkit-transition: all .25s ease;
-  font-family: 'Exo', sans-serif;
+  font-family: "Exo", sans-serif;
   letter-spacing: .025rem;
   vertical-align: text-top;
 }
@@ -297,9 +297,18 @@ a:hover {
   outline: none;
 }
 
+/* ERRORS */
+.errors p {
+  display: inline-block;
+  border-bottom: 2px solid rgb(0, 191, 165);
+}
+
 /* LOGIN-SIGNUP */
 .login-wrapper {
+  margin: auto;
   text-align: center;
+  padding: 0 10px;
+  max-width: 320px;
 }
 .login-wrapper h1 {
   font-size: 18px;
@@ -309,11 +318,7 @@ a:hover {
   font-size: 14px;
   margin-bottom: 10px;
 }
-.login-wrapper {
-  padding: 0 30px;
-}
 .login-content {
-  margin-top: 15px;
   height: 130px;
 }
 .dope-field {
@@ -372,11 +377,12 @@ a:hover {
 }
 
 /* SETTINGS */
+.settings-wrapper {
+  max-width: 320px;
+  margin: auto;
+}
 .settings-save {
   margin: 10px 0;
-}
-.settings h1 {
-  font-size: 20px;
 }
 
 /* SHOWPOD */
