--- a/podcasts/templates/episodes.html
+++ b/podcasts/templates/episodes.html
@@ -26,14 +26,14 @@
       {% for episode in results.episodes %}
         <tr class="episode-header toggle" data-toggle="collapse" data-target="#more-collapse{{ episode.position }}" aria-expanded="false">
           <th scope="row">
-            {% if results.view == 'playlist' %}
+            {% if results.view == "playlist" %}
               {{ episode.position }}
             {% else %}
               {{ episode.position }}
             {% endif %}
           </th>
           <td class="title">
-            {% if results.view == 'playlist' %}
+            {% if results.view == "playlist" %}
               <strong>
                 {{ episode.podcast.title }} -
               </strong>
@@ -46,7 +46,7 @@
             {% endif %}
           </td>
           <td>
-            {{ episode.pubDate|date:'d-m-Y H:i' }}
+            {{ episode.pubDate|date:"d-m-Y H:i" }}
           </td>
           <td>
             {% if episode.size %}
@@ -73,11 +73,11 @@
                   No description
                 {% endif %}
               </p>
-              {% if results.view == 'playlist' %}
+              {% if results.view == "playlist" %}
               {% endif %}
               <div class="episode-buttons">
                 {% if user.is_authenticated %}
-                  {% if results.view == 'playlist' %}
+                  {% if results.view == "playlist" %}
                     <a class="btn-dope active showpod-link" data-podid="{{ episode.podcast.podid }}" href="{% url 'showpod' podid=episode.podcast.podid %}">
                       Show podcast
                     </a>
@@ -114,7 +114,7 @@
                 <form class="playlist-form" action="{% url 'playlist' %}" method="POST" target="_blank">
                   {% csrf_token %}
                   <input type="hidden" name="mode" value="play" />
-                  {% if results.view == 'playlist' %}
+                  {% if results.view == "playlist" %}
                     <input type="hidden" name="pos" value="{{ episode.position }}" />
                   {% else %}
                     <input type="hidden" name="signature" value="{{ episode.signature }}" />
@@ -123,7 +123,7 @@
                     <i class="fas fa-play"></i>
                   </button>
                 </form>
-                {% if user.is_authenticated and results.view == 'showpod' %}
+                {% if user.is_authenticated and results.view == "showpod" %}
                   <form class="playlist-form" action="{% url 'playlist' %}" method="POST">
                     {% csrf_token %}
                     <input type="hidden" name="mode" value="add" />
