--- a/podcasts/templates/search.html
+++ b/podcasts/templates/search.html
@@ -8,7 +8,7 @@
   <div class="row collapse fade view-collapse {% if results.view == 'grid' %}show{% endif %}">
     {% for podcast in results.podcasts1 %}
     <div class="col-lg-2 col-md-3 col-4 result-box">
-      <a class="showpod-link" href="{% url 'showpod' podid=podcast.object.podid %}">
+      <a class="showpod-link" data-podid="{{ podcast.object.podid }}" href="{% url 'showpod' podid=podcast.object.podid %}">
         <img class="img-fluid" src="https://dopepod.me/img/{{ podcast.object.artworkUrl }}200x200bb.jpg" onerror="this.src='http://{{ podcast.object.artworkUrl }}200x200bb.jpg'"
           alt="{{ podcast.object.title }}" />
         <h1>
