view-button works

--- a/podcasts/templates/results_base.html
+++ b/podcasts/templates/results_base.html
@@ -19,7 +19,7 @@
       <div class="collapse fade options-collapse" id="alphabet-collapse-{{ results.view }}">
         <div class="options-buttons">
           {% if results.alphabet_nix_url %}
-            <a class="btn-dope options-button nix-button" href="{{ results.alphabet_nix_url }}" id="alphabet-nix">
+            <a class="btn-dope options-button nix-button" href="{{ results.alphabet_nix_url }}">
               <i class="fas fa-times" title="Undo Selection"></i>
             </a>
           {% endif %}
