headers & titles done

--- a/index/templates/footer.min.html
+++ b/index/templates/footer.min.html
@@ -1,1 +1,1 @@
-<div class="container px-0"><ul><li><a class="dopebar-link" href="#">About</a></li><li><a class="dopebar-link" href="#">About</a></li><li><a class="dopebar-link" href="#">About</a></li></ul></div>
+<div class="container px-0"><ul><li><a class="dopebar-link" href="#">About</a></li></ul></div>
