--- a/podcasts/templates/results_bar.html
+++ b/podcasts/templates/results_bar.html
@@ -1,3 +1,4 @@
+{% if results.header %}
 <div class="row results-bar">
   <div class="col-12 results-header">
     {% if results.extra_options %}
@@ -16,8 +17,9 @@
     {% endif %}
     <h1>
       <strong>
-        {{ results.header }}
+         {{ results.header }}
       </strong>
     </h1>
   </div>
 </div>
+{% endif %}
