--- a/podcasts/templates/subscriptions.html
+++ b/podcasts/templates/subscriptions.html
@@ -40,6 +40,12 @@
         </div>
       </div>
     {% endwith %}
+  {% empty %}
+    <div class="col-12 col-lg-4 login-wrapper">
+      <p>
+        No subscriptions.
+      </p>
+    </div>
   {% endfor %}
 </div>
 
