--- a/index/templates/dashboard.html
+++ b/index/templates/dashboard.html
@@ -1,5 +1,7 @@
 <div class="row">
-  <div class="col-12 col-md-4 offset-md-4">
+  <div class="col-12 col-lg-4 dope-wrapper">
+  </div>
+  <div class="col-12 col-lg-4 dope-wrapper">
     <p>
       {% with user.subscription.count as count %}
         You have {{ count }}
@@ -16,5 +18,7 @@
         </a>
       {% endwith %}
     </p>
+  </div>
+  <div class="col-12 col-lg-4 dope-wrapper">
   </div>
 </div>
