--- a/index/templates/errors.html
+++ b/index/templates/errors.html
@@ -1,11 +1,11 @@
 {% for k, v in errors.items %}
-<p>
+<p class="color-1-trans">
   {{ v }}
 </p>
 {% endfor %}
 
 {% if message %}
-  <p>
+  <p class="color-1-trans">
     {{ message }}
   </p>
 {% endif %}
