--- a/index/templates/errors.min.html
+++ b/index/templates/errors.min.html
@@ -1,1 +1,1 @@
-{% for k, v in errors.items %}<p>{{ v }}</p>{% endfor %} {% if message %}<p>{{ message }}</p>{% endif %}
+{% for k, v in errors.items %}<p class="color-1-trans">{{ v }}</p>{% endfor %} {% if message %}<p class="color-1-trans">{{ message }}</p>{% endif %}
