--- a/index/templates/password_reset.html
+++ b/index/templates/password_reset.html
@@ -7,7 +7,7 @@
           href="/?view=password">password reset</a>.</p>
       {% else %}
         {% if errors %}
-          <div class="errors color-1-trans">
+          <div class="errors">
             {% include "errors.min.html" %}
           </div>
         {% endif %}
