--- a/index/templates/settings.html
+++ b/index/templates/settings.html
@@ -1,10 +1,12 @@
 <div class="row">
-  <div class="errors color-1-trans">
-    {% include "errors.min.html" %}
+  {% if errors %}
+    <div class="errors">
+      {% include "errors.min.html" %}
+    </div>
+  {% endif %}
+  <div class="col-12 col-lg-4 dope-wrapper">
   </div>
-  <div class="col-12 col-lg-4 settings-wrapper">
-  </div>
-  <div class="col-12 col-lg-4 settings-wrapper">
+  <div class="col-12 col-lg-4 dope-wrapper">
     <form class="settings-form" action="{% url 'settings' %}" method="POST">
       <div class="login-form-group">
         <label for="email">Email</label>
@@ -30,7 +32,7 @@
       </div>
     </form>
   </div>
-  <div class="col-12 col-lg-4 settings-wrapper">
+  <div class="col-12 col-lg-4 dope-wrapper">
     <button class="btn-dope">Delete Account</button>
   </div>
 </div>
