just one more fix

--- a/podcasts/templates/episodes.html
+++ b/podcasts/templates/episodes.html
@@ -152,14 +152,10 @@
       </table>
     </div>
   {% elif not results.episodes and results.view == "playlist" %}
-    <div class="col-12 col-lg-4 dope-wrapper">
-    </div>
-    <div class="col-12 col-lg-4 dope-wrapper">
+    <div class="col-12 dope-wrapper">
       <p>
         No episodes.
       </p>
-    </div>
-    <div class="col-12 col-lg-4 dope-wrapper">
     </div>
   {% endif %}
 </div>
