--- a/podcasts/templates/subscriptions.html
+++ b/podcasts/templates/subscriptions.html
@@ -41,7 +41,7 @@
       </div>
     {% endwith %}
   {% empty %}
-    <div class="col-12 col-lg-4 dope-wrapper">
+    <div class="col-12 dope-wrapper">
       <p>
         No subscriptions.
       </p>
