--- a/index/templates/password_reset.html
+++ b/index/templates/password_reset.html
@@ -1,7 +1,5 @@
 <div class="row">
-  <div class="col-12 col-lg-4 dope-wrapper">
-  </div>
-  <div class="col-12 col-lg-4 dope-wrapper">
+  <div class="col-12 dope-wrapper">
     {% if results.view == "reset_password" %}
       {% if errors.general %}
       <p>The password reset link was invalid, possibly because it has already been used. Please request a new
@@ -38,7 +36,5 @@
     {% elif results.view == "confirm_email" %}
       <p>Your email is now confirmed.</p>
     {% endif %}
-  </div>
-  <div class="col-12 col-lg-4 dope-wrapper">
   </div>
 </div>
