--- a/podcasts/templates/episodes.html
+++ b/podcasts/templates/episodes.html
@@ -129,7 +129,7 @@
                         <i class="fas fa-play"></i>
                       </button>
                     </form>
-                    {% if user.is_authenticated and results.view == "showpod" %}
+                    {% if user.is_authenticated and results.view == "episodes" %}
                       <form class="playlist-form" action="{% url 'playlist' %}" method="POST">
                         {% csrf_token %}
                         <input type="hidden" name="mode" value="add" />
