--- a/podcasts/templates/results_buttons.html
+++ b/podcasts/templates/results_buttons.html
@@ -1,26 +1,32 @@
 <div class="col results-buttons">
-  {% if results.view == "showpod" %} {% if user.is_authenticated %}
-  <form class="d-inline subscriptions-form" action="{% url 'subscriptions' %}" method="POST">
-    {% csrf_token %}
-    <input type="hidden" name="podids[]" value="{{ results.podcast.podid }}"> 
-    {% if results.podcast.is_subscribed %}
-      <button type="submit" class="btn-dope sub-button">
-        Unsubscribe
-      </button>
-    {% else %}
-      <button type="submit" class="btn-dope active sub-button">
-        Subscribe
-      </button>
+  {% if results.view == "showpod" or results.view == "episodes" %}
+    {% if user.is_authenticated %}
+      <form class="d-inline subscriptions-form" action="{% url 'subscriptions' %}" method="POST">
+        {% csrf_token %}
+        <input type="hidden" name="podids[]" value="{{ results.podcast.podid }}"> 
+        {% if results.podcast.is_subscribed %}
+          <button type="submit" class="btn-dope sub-button">
+            Unsubscribe
+          </button>
+        {% else %}
+          <button type="submit" class="btn-dope active sub-button">
+            Subscribe
+          </button>
+        {% endif %}
+      </form>
     {% endif %}
-  </form>
+    <a class="btn-dope episodes-button toggle" data-toggle="collapse" href="#episodes-collapse" aria-expanded="true" aria-controls="episodes-collapse">
+      {% if request.is_ajax and results.view == "showpod" %}
+        {% include "button_loading.min.html" %}
+      {% else %}
+        Episodes
+      {% endif %}
+    </a>
+    <a class="btn-dope reviews-button toggle" data-toggle="collapse" href="#reviews-collapse" aria-expanded="false" aria-controls="reviews-collapse">
+      Reviews
+    </a>
   {% endif %}
-  <a class="btn-dope episodes-button toggle" data-toggle="collapse" href="#episodes-collapse" aria-expanded="true" aria-controls="episodes-collapse">
-    {% if request.is_ajax and not results.episodes %} {% include "button_loading.min.html" %} {% else %} Episodes {% endif %}
-  </a>
-  <a class="btn-dope reviews-button toggle" data-toggle="collapse" href="#reviews-collapse" aria-expanded="false" aria-controls="reviews-collapse">
-    Reviews
-  </a>
-  {% endif %} {% if results.view == "grid" or results.view == "list" %} {% if results.view == "grid" %}
+  {% if results.view == "grid" or results.view == "list" %} {% if results.view == "grid" %}
   <a class="btn-dope view-button active" href="{{ results.view_url }}">
     <span data-view="list">
       <i class="fas fa-th" title="Toggle View"></i>
